testをリファクタリングした

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,7 @@
+<head>
+    <title>Home | Ruby on Rails Tutorial Sample App</title>
+</head>
+
 <h1>StaticPages#help</h1>
 <p>Find me in app/views/static_pages/help.html.erb</p>
 <p>ここに文章を書くと、ページに追加されるよ。多分改行もされていると思う<p>
