--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,5 @@
-<head>
-    <title>Home | Ruby on Rails Tutorial Sample App</title>
-</head>
+<% provide(:title, "About") %>
+
 
 <h1>StaticPages#about</h1>
 <p>Find me in app/views/static_pages/about.html.erb</p>
