--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
         <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
         <!-- current_userが空でない場合はtrueを返される。 -->
-          <li><%= link_to "Users", '#' %></li>
+          <li><%= link_to "Users", users_path %></li>
           <!-- 遷移先のルートが設定されていないため、クリックしても何も起こらない -->
           <li class="dropdown">
             <a href="#" id="account" class="dropdown-toggle">
@@ -25,7 +25,7 @@
             <ul id="dropdown-menu" class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
               <!-- current_userメソッドを使用する。 -->
-              <li><%= link_to "Settings", '#' %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path,
