--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -7,7 +7,7 @@
       <%# フォームの送信先のアクションを指定している %>
       <%#password_reset_url(params[:id])でも動作する%>
       <%# editはGETアクションだからPATCHはできない%>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages', object: f.object %>
 
       <%= hidden_field_tag :email, @user.email %>
 
